Fixed markup html and image size on mobile

--- a/src/styles/component/_posts.scss
+++ b/src/styles/component/_posts.scss
@@ -1,5 +1,6 @@
 .single-post-image {
   max-width: 100%;
+  height: auto;
 }
 
 .custom-box-shadow {
